--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
   },
   "dependencies": {
     "forever": "^4.0.3",
-    "koa": "^2.14.2"
+    "koa": "^2.14.2",
+    "koa-body": "^6.0.1",
+    "koa-morgan": "^1.0.1",
+    "koa-router": "^12.0.1",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@koa/cors": "^4.0.0"
   }
 }
